; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_vmur.c_ur_pm_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/s390/char/extr_vmur.c_ur_pm_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ccw_device = type { i32 }
%struct.urdev = type { i64 }

@.str = private unnamed_addr constant [24 x i8] c"ur_pm_suspend: cdev=%p\0A\00", align 1
@.str.1 = private unnamed_addr constant [56 x i8] c"Unit record device %s is busy, %s refusing to suspend.\0A\00", align 1
@ur_banner = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ccw_device*)* @ur_pm_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ur_pm_suspend(%struct.ccw_device* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ccw_device*, align 8
  %4 = alloca %struct.urdev*, align 8
  store %struct.ccw_device* %0, %struct.ccw_device** %3, align 8
  %5 = load %struct.ccw_device*, %struct.ccw_device** %3, align 8
  %6 = getelementptr inbounds %struct.ccw_device, %struct.ccw_device* %5, i32 0, i32 0
  %7 = call %struct.urdev* @dev_get_drvdata(i32* %6)
  store %struct.urdev* %7, %struct.urdev** %4, align 8
  %8 = load %struct.ccw_device*, %struct.ccw_device** %3, align 8
  %9 = call i32 @TRACE(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), %struct.ccw_device* %8)
  %10 = load %struct.urdev*, %struct.urdev** %4, align 8
  %11 = getelementptr inbounds %struct.urdev, %struct.urdev* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %22

14:                                               ; preds = %1
  %15 = load %struct.ccw_device*, %struct.ccw_device** %3, align 8
  %16 = getelementptr inbounds %struct.ccw_device, %struct.ccw_device* %15, i32 0, i32 0
  %17 = call i32 @dev_name(i32* %16)
  %18 = load i32, i32* @ur_banner, align 4
  %19 = call i32 @pr_err(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str.1, i64 0, i64 0), i32 %17, i32 %18)
  %20 = load i32, i32* @EBUSY, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %2, align 4
  br label %23

22:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

23:                                               ; preds = %22, %14
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local %struct.urdev* @dev_get_drvdata(i32*) #1

declare dso_local i32 @TRACE(i8*, %struct.ccw_device*) #1

declare dso_local i32 @pr_err(i8*, i32, i32) #1

declare dso_local i32 @dev_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
